# mcpprep

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
src/: collection_base.h  query.h  repository.h
